[package]
name = "rusb"
version = "0.8.0"
authors = ["David Cuddeback <david.cuddeback@gmail.com>", "Ilya Averyanov <a1ien.n3t@gmail.com>"]
description = "Rust library for accessing USB devices."
license = "MIT"
homepage = "https://github.com/a1ien/rusb"
repository = "https://github.com/a1ien/rusb.git"
readme = "README.md"
keywords = ["usb", "libusb", "hardware", "bindings"]
edition = "2018"
build = "build.rs"

[badges]
travis-ci = { repository = "a1ien/rusb" }

[features]
vendored = [ "libusb1-sys/vendored" ]

[dependencies]
libusb1-sys = "0.5.0"
libc = "0.2"

[dev-dependencies]
regex = "1"
