[package]
name = "rusb"
version = "0.8.1"
authors = ["David Cuddeback <david.cuddeback@gmail.com>", "Ilya Averyanov <a1ien.n3t@gmail.com>"]
description = "Rust library for accessing USB devices."
license = "MIT"
homepage = "https://github.com/a1ien/rusb"
repository = "https://github.com/a1ien/rusb.git"
readme = "README.md"
keywords = ["usb", "libusb", "hardware", "bindings"]
edition = "2018"
build = "build.rs"

[badges]
travis-ci = { repository = "a1ien/rusb" }

[features]
vendored = [ "libusb1-sys/vendored" ]

[workspace]
members = ["libusb1-sys"]

[dependencies]
lazy_static = "1.4.0"
libusb1-sys = { path = "libusb1-sys", version = "0.5.0" }
libc = "0.2"

[dev-dependencies]
regex = "1"
